--- a/TPW_PN_JS/MainWindow.xaml
+++ b/TPW_PN_JS/MainWindow.xaml
@@ -1,18 +1,15 @@
-﻿<Window x:Class="TPW_PN_JS.MainWindow"
+﻿<!-- MainWindow.xaml -->
+<Window x:Class="TPW_PN_JS.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TPW_PN_JS"
-        mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-	<Grid>
-		<Grid.RowDefinitions>
-			<RowDefinition Height="Auto"/>
-			<RowDefinition Height="*"/>
-		</Grid.RowDefinitions>
-		<Button x:Name="StartButton" Content="Start" Click="StartButton_Click" HorizontalAlignment="Center"/>
-		<Canvas x:Name="BallCanvas" Grid.Row="1" Background="White" />
-	</Grid>
+    <Grid>
+        <Canvas x:Name="BallCanvas" Background="Beige"/>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="10">
+            <Label Content="Liczba kulek:"/>
+            <TextBox x:Name="BallCountTextBox" Width="50" Text="2" Margin="5,0,5,0"/>
+            <Button x:Name="AddBallsButton" Content="Dodaj kule" Click="AddBallsButton_Click"/>
+        </StackPanel>
+        <Rectangle x:Name="Boundary" Stroke="Black" StrokeThickness="2" Width="300" Height="300" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    </Grid>
 </Window>
-
