--- a/TPW_PN_JS/MainWindow.xaml
+++ b/TPW_PN_JS/MainWindow.xaml
@@ -8,7 +8,7 @@
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="10">
             <Label Content="Liczba kulek:"/>
             <TextBox x:Name="BallCountTextBox" Width="50" Text="2" Margin="5,0,5,0"/>
-            <Button x:Name="AddBallsButton" Content="Dodaj kule" Click="AddBallsButton_Click"/>
+            <Button x:Name="AddBallsButton" Content="Start" Click="AddBallsButton_Click"/>
         </StackPanel>
         <Rectangle x:Name="Boundary" Stroke="Black" StrokeThickness="2" Width="300" Height="300" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     </Grid>
