--- a/TPW_PN_JS/MainWindow.xaml
+++ b/TPW_PN_JS/MainWindow.xaml
@@ -4,12 +4,14 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Canvas x:Name="BallCanvas" Background="Beige"/>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="10">
             <Label Content="Liczba kulek:"/>
             <TextBox x:Name="BallCountTextBox" Width="50" Text="2" Margin="5,0,5,0"/>
             <Button x:Name="AddBallsButton" Content="Start" Click="AddBallsButton_Click"/>
         </StackPanel>
-        <Rectangle x:Name="Boundary" Stroke="Black" StrokeThickness="2" Width="300" Height="300" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+		<StackPanel Orientation="Horizontal"  HorizontalAlignment="Center" VerticalAlignment="Center">
+			<Canvas x:Name="BallCanvas" Background="Beige"/>
+			<Rectangle x:Name="Boundary" Stroke="Black" StrokeThickness="2" Width="300" Height="300"/>
+		</StackPanel>
     </Grid>
 </Window>
