Podzial na moduly

--- a/TPW_PN_JS/Prezentacja/View/MainWindow.xaml
+++ b/TPW_PN_JS/Prezentacja/View/MainWindow.xaml
@@ -1,5 +1,5 @@
 ﻿<!-- MainWindow.xaml -->
-<Window x:Class="TPW_PN_JS.MainWindow"
+<Window x:Class="TPW_PN_JS.View.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="450" Width="800">
