--- a/TPW_PN_JS/App.xaml
+++ b/TPW_PN_JS/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:TPW_PN_JS"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Prezentacja/View/MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
