--- a/TPW_PN_JS/Prezentacja/View/MainWindow.xaml
+++ b/TPW_PN_JS/Prezentacja/View/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
+    <!--<Grid>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="10">
             <Label Content="Liczba kulek:"/>
             <TextBox x:Name="BallCountTextBox" Width="50" Text="2" Margin="5,0,5,0"/>
@@ -13,5 +13,5 @@
 			<Canvas x:Name="BallCanvas" Background="Beige"/>
 			<Rectangle x:Name="Boundary" Stroke="Black" StrokeThickness="2" Width="300" Height="300"/>
 		</StackPanel>
-    </Grid>
+    </Grid>-->
 </Window>
