--- a/TPW_PN_JS/Prezentacja/View/MainWindow.xaml
+++ b/TPW_PN_JS/Prezentacja/View/MainWindow.xaml
@@ -1,17 +1,43 @@
 ﻿<!-- MainWindow.xaml -->
 <Window x:Class="TPW_PN_JS.View.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="450" Width="800">
-    <!--<Grid>
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="10">
-            <Label Content="Liczba kulek:"/>
-            <TextBox x:Name="BallCountTextBox" Width="50" Text="2" Margin="5,0,5,0"/>
-            <Button x:Name="AddBallsButton" Content="Start" Click="AddBallsButton_Click"/>
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        mc:Ignorable="d"
+        xmlns:vm="clr-namespace:WpfApp1.Prezentacja.ViewModel"
+        Title="Generator kulek" Height="500" Width="500">
+    <Window.DataContext>
+        <vm:MainViewModel/>
+    </Window.DataContext>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <StackPanel Orientation="Horizontal" Margin="10">
+            <TextBox Width="100" Height="25" Text="{Binding BallCount, UpdateSourceTrigger=PropertyChanged}"/>
+            <Button Content="Start" Command="{Binding StartCommand}"/>
         </StackPanel>
-		<StackPanel Orientation="Horizontal"  HorizontalAlignment="Center" VerticalAlignment="Center">
-			<Canvas x:Name="BallCanvas" Background="Beige"/>
-			<Rectangle x:Name="Boundary" Stroke="Black" StrokeThickness="2" Width="300" Height="300"/>
-		</StackPanel>
-    </Grid>-->
+        <Canvas Grid.Row="1" x:Name="BallCanvas" Background="LightGray">
+            <ItemsControl ItemsSource="{Binding Balls}">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <Canvas/>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <Ellipse Width="20" Height="20" Fill="Blue"/>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+                <ItemsControl.ItemContainerStyle>
+                    <Style TargetType="ContentPresenter">
+                        <Setter Property="Canvas.Left" Value="{Binding X, Mode=OneWay}"/>
+                        <Setter Property="Canvas.Top" Value="{Binding Y, Mode=OneWay}"/>
+                    </Style>
+                </ItemsControl.ItemContainerStyle>
+            </ItemsControl>
+        </Canvas>
+    </Grid>
 </Window>
